gitops/espresso/infrastructure/controllers/postgres/pgweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  namespace: postgres
spec:
  selector:
    app: pgweb
  ports:
    - name: http
      port: 80
      targetPort: http
