gitops/espresso/infrastructure/controllers/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-internal
  namespace: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
